--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,6 @@
 <h1><%= @post.title %></h1>
 
 <!-- Add code here to link to the post's category. -->
+<%= link_to @category.name, category_path(@category) %>
 
 <p><%= @post.description %></p>
